rust/test/dt/type_constructor/dynamic/types/many_too_many_params.stderr
error: Parametrized element should be many, because Many has only one element
       Many : < T1, T2 > ;
 --> ../../../rust/test/dt/type_constructor/dynamic/types/many_too_many_params.rs:4:1
  |
4 | / types!
5 | | {
6 | |   many Many : < T1, T2 >;
7 | | }
  | |_^
  |
  = note: this error originates in the macro `$crate::_many` (in Nightly builds, run with -Z macro-backtrace for more info)
