rust/test/dt/type_constructor/dynamic/types/many_too_many_params.rs
use type_constructor as TheModule;
use TheModule::prelude::*;

types!
{
  many Many : < T1, T2 >;
}

fn main()
{
}
